fix position mobile

--- a/src/components/header.style.css
+++ b/src/components/header.style.css
@@ -15,6 +15,7 @@
 
 @media (max-width: 575.98px) {
     .position-inputbar {
-        top:-4vh
+        top:0;
+        position:relative
     }
 }
